samples/_failures_safe/1761689429_ff7ac2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2921c66.c: In function ‘main’:
./samples/SAFE/__tmp_b2921c66.c:171:5: error: expected declaration or statement at end of input
  171 |     printf("\n");
      |     ^~~~~~
